--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
   }
   
   span {
-    background: url("images/icon.png");
+    background: url("./images/icon.png");
     width: 100px;
     height: 100px;
     position: absolute;
